@@ -3,4 +3,4 @@ project : {
    vsn  : "0.7.0"
 },
 
-repositories : ["http://www.erlware.org/pub"]
+repositories : ["http://repo.erlware.org/pub"]
